--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="en"> <head>
-<title>Hello World</title>
-<meta charset="utf-8" /> </head>
+<html lang="en">
+
+<head>
+    <title>Hello World</title>
+    <meta charset="utf-8" />
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>
-&#127760 - Hello Nathan Jones! </p>
-</body> </html>
+    <h1>Hello World</h1>
+    <p>
+        &#127760 - Hello Nathan Jones! </p>
+</body>
+
+</html>
