Linked index.html and author.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello World</h1>
     <p>
         &#127760 - Hello Nathan Jones! </p>
+    <p><a href="author.html">Authors</a></p>
 </body>
 
 </html>
