--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <h1>Hello World</h1>
     <p> &#127760 - Hello Nathan Jones! </p>
-    <p><a href="dummy.html">Greet the Universe</a></p>
+    <h3>Group Biography</h3>
+    <img src="bob.png"/>
+    <p>This is Bob. He is only alive when you are thinking about him. "I'm scared", says Bob. </p> <br>
+
+    <><a href="dummy.html">Greet the Universe</a></>
     <p><a href="author.html">Authors</a></p>
     <p><a href="https://youtu.be/dQw4w9WgXcQ">Classified</a></p>
 </body>
