--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Hello World</h1>
     <p> &#127760 - Hello Nathan Jones! </p>
+    <h3>Bob's Bio</h3>
+    <p> This is Bob. He only exists in your mind. Whenever you stop thinking about him, he dies. "I'm scared", says Bob. </p>
+    <img src="bob.png">
     <p><a href="dummy.html">Greet the Universe</a></p>
     <p><a href="author.html">Authors</a></p>
     <p><a href="https://youtu.be/dQw4w9WgXcQ">Classified</a></p>
