--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hello World</h1>
     <p> &#127760 - Hello Nathan Jones! </p>
     <h3>Bob's Bio</h3>
-    <p> This is Bob. He only exists in your mind. Whenever you stop thinking about him, he dies. "I'm scared", says Bob. </p>
+    <p> This is Bob. He only exists in your head. Whenever you stop thinking about him, he dies. "I'm terrified", says Bob. Random extra sentence.</p>
     <img src="bob.png">
     <p><a href="dummy.html">Greet the Universe</a></p>
     <p><a href="author.html">Authors</a></p>
